; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/igb/extr_e1000_82575.c_igb_power_down_phy_copper_82575.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/igb/extr_e1000_82575.c_igb_power_down_phy_copper_82575.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e1000_hw = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @igb_power_down_phy_copper_82575(%struct.e1000_hw* %0) #0 {
  %2 = alloca %struct.e1000_hw*, align 8
  store %struct.e1000_hw* %0, %struct.e1000_hw** %2, align 8
  %3 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %4 = call i64 @igb_enable_mng_pass_thru(%struct.e1000_hw* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %13, label %6

6:                                                ; preds = %1
  %7 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %8 = call i64 @igb_check_reset_block(%struct.e1000_hw* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %6
  %11 = load %struct.e1000_hw*, %struct.e1000_hw** %2, align 8
  %12 = call i32 @igb_power_down_phy_copper(%struct.e1000_hw* %11)
  br label %13

13:                                               ; preds = %10, %6, %1
  ret void
}

declare dso_local i64 @igb_enable_mng_pass_thru(%struct.e1000_hw*) #1

declare dso_local i64 @igb_check_reset_block(%struct.e1000_hw*) #1

declare dso_local i32 @igb_power_down_phy_copper(%struct.e1000_hw*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
